Fix layout issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -204,13 +204,13 @@ img {
 }
 
 hr, .about {
-  width: 50%;
+  width: 70%;
 }
 
 .project-list {
   display: flex;
   flex-wrap: wrap;
-  width: 50%;
+  width: 60%;
   flex: 0 300px;
   justify-content: center;
   margin-bottom: 10vh;
@@ -386,6 +386,10 @@ img:hover {
   }
 
   .project-list {
+    width: 50%;
+  }
+
+  hr, .about {
     width: 50%;
   }
 }
