--- a/scss/component/_layout.scss
+++ b/scss/component/_layout.scss
@@ -39,13 +39,13 @@ img {
 }
 
 hr, .about {
-  width: 50%;
+  width: 70%;
 }
 
 .project-list {
   display: flex;
   flex-wrap: wrap;
-  width: 50%;
+  width: 60%;
   flex: 0 300px;
   justify-content: center;
   margin-bottom: 10vh;
